swagger + comment might be bug at PUT and DELETE
double check ! one more time
